# CAN

./: CMakeLists.txt  README.md  data_structure.h  func_declaration.h  initial_utils.c  io_utils.c  main.c  memory_oper.c  router.c  traffic_oper.c  unit_test.c
src/header/: data_structure.h  func_declaration.h
src/routing/: router_simulate.c  routing_algorithm.c  routing_utils.c
src/traffic/: traffic_pattern.c  traffic_utils.c
src/utils/: initial_utils.c  io_utils.c  memory_oper.c
test/: shuffle_traffic.c  test-main.c  unit_test.c
